--- a/src/components/BoardTask/BoardTask.scss
+++ b/src/components/BoardTask/BoardTask.scss
@@ -2,7 +2,6 @@
 
 .board-column-task {
     background-color: $lightest-color !important;
-    width: 300px;
 }
 
 .board-column-task-header {
