--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -5,50 +5,3 @@ $lighter-color: #98c1d9;
 $lightest-color: #dcf1e5;
 $danger-color: #e66767;
 
-body {
-    font-family: Tahoma,sans-serif;
-}
-
-html, body, #root {
-    height: 100%;
-}
-
-body {
-    margin: 0px;
-    background-color: $lightest-color  !important;
-}
-
-.MuiButton-containedPrimary{
-    background-color: $darkest-color !important;
-}
-
-.MuiButton-textPrimary{
-    color: $main-color !important;
-    font-weight: bold !important;
-}
-
-.MuiButton-containedSecondary{
-    background-color: $danger-color !important;
-}
-
-.MuiButton-textSecondary {
-    color: $danger-color !important;
-    font-weight: bold !important;
-}
-
-.MuiIconButton-colorSecondary {
-    color: $danger-color  !important;
-}
-
-.action-buttons-container {
-    text-align: end;
-}
-
-.MuiCardHeader-title {
-    font-size: 1rem !important;
-}
-
-.dragover {
-    background-color: $lighter-color !important;
-}
-
